# python-shinobi-client

./: .coveragerc  .travis.yml  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
shinobi/: shinobi_controller.py  user.py
shinobi/tests/: test_shinobi_controller.py  test_user.py
shinobi_client/: __init__.py  _common.py  api_key.py  cli.py  client.py  shinobi.py  shinobi_controller.py  user.py
shinobi_client/orms/: monitor.py  user.py
shinobi_client/tests/: _common.py  test_api_key.py  test_client.py  test_shinobi.py  test_shinobi_controller.py  test_user.py
shinobi_client/tests/orms/: test_monitor.py  test_user.py
shinobi_client/tests/resources/: metadata.py
shinobi_client/tests/resources/monitors/: details-as-json.json  example-1.json  example-2.json
