[tool.poetry]
name = "shinobi"
version = "0.1.0"
description = "https://github.com/colin-nolan/python-shinobi"

license = "AGPL v3.0"

authors = [
    "Colin Nolan <cn580@alumni.york.ac.uk>"
]

readme = "README.md"

repository = "https://github.com/colin-nolan/python-shinobi"
homepage = "https://github.com/colin-nolan/python-shinobi"

keywords = ["shinobi", "client", "cli"]

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.9"
requests = { version = "^2.23" }
