[tool.poetry]
name = "shinobi-client"
version = "0.1.0"
description = "https://github.com/colin-nolan/python-shinobi-client"

license = "AGPL v3.0"

authors = [
    "Colin Nolan <cn580@alumni.york.ac.uk>"
]

readme = "README.md"

repository = "https://github.com/colin-nolan/python-shinobi-client"
homepage = "https://github.com/colin-nolan/python-shinobi-client"

keywords = ["shinobi", "client", "cli"]

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.9"
requests = "^2.23"
logzero = "^1.5.0"

# Required for optional shinobi_controller.py
gitpython = { version = "^3", optional = true }
docker-compose = { version = "^1.25", optional = true }
get-port = { version = "^0.0.5", optional = true }

[tool.poetry.dev-dependencies]
coverage = "^5.0.4"

[tool.poetry.extras]
shinobi-controller = ["gitpython", "docker-compose", "get-port"]